# copperclaw

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  parent-pom.xml  podman-compose.yml
agents/allsource-analyst-service/: Dockerfile  pom.xml  system-prompt.md
agents/bda-service/: Dockerfile  pom.xml  system-prompt.md
agents/collection-service/: Dockerfile  pom.xml  system-prompt.md
agents/commander-service/: Dockerfile  pom.xml  system-prompt.md
agents/cot-gateway-service/: Dockerfile  pom.xml
agents/develop-service/: Dockerfile  pom.xml  system-prompt.md
agents/execution-service/: Dockerfile  pom.xml  system-prompt.md
agents/isr-tasking-service/: Dockerfile  pom.xml  system-prompt.md
agents/legal-review-service/: Dockerfile  pom.xml  system-prompt.md
agents/target-nomination-service/: Dockerfile  pom.xml  system-prompt.md
config/: prometheus.yml
docs/: ARCHITECTURE.md  PLATFORM_ANNEX.md  SCHEMAS.md
docs/phase1/: COPPERCLAW_Phase1_Scenario.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/nginx.default.d/: routes.conf
frontend/src/: App.tsx  (+1 more)
operator-service/: Dockerfile  requirements.txt
scripts/: copperclaw-watch.sh  e2e-test.sh  logrotate.conf  smoke-test.sh  start.sh  stop.sh
shared/: pyproject.toml  schemas.py
shared-java/: pom.xml
shared/copperclaw_shared/: __init__.py  base_types.py  enums.py  kafka_topics.py  operator.py  reports.py  sse.py
shared/tests/: test_schemas.py
sse-bridge-service/: Dockerfile  pom.xml
state-service/: Dockerfile  pom.xml
(+195 files in other folders)
